change workflow job to workflow run
